Fix the logo img icon align problem in Firefox
Fix the logo img icon align problem in Firefox.

--- a/src/assets/scss/md/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/md/_sidebar-and-main-panel.scss
@@ -240,6 +240,7 @@
                 img{
                   width: 55%;
                   vertical-align: -webkit-baseline-middle;
+                  vertical-align: -moz-middle-with-baseline;
                 }
             }
         }
